# tarly

./: .env_schema  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
books/: admin.py  models.py  tests.py
books/management/commands/: populate_db.py
books/migrations/: 0001_initial.py
docker/: Dockerfile  entrypoint.sh
shops/: admin.py  models.py  serializers.py  tests.py  views.py
shops/migrations/: 0001_initial.py  0002_auto_20190521_0912.py
tarly/: settings.py  urls.py  wsgi.py
